<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_column="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="5dp"
        android:textStyle="bold"
        android:text=""/>

    <TextView
        android:layout_column="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/transfers"/>

    <TextView
        android:layout_column="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/evolutions"/>

    <TextView
        android:layout_column="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/post_evolution_transfers"/>


</TableRow>