<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExperienceActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_xp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/main_xp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary">

            <TextView
                android:id="@+id/tv_xp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:textSize="56sp"
                android:textColor="@color/text_icons"
                android:text="@string/xp_placeholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_xp"
                android:layout_marginStart="10dp"
                android:layout_alignBaseline="@+id/tv_xp"
                android:textSize="18sp"
                android:textColor="@color/text_icons"
                android:text="@string/xp"/>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/main_xp_layout">

            <TextView
                android:id="@+id/tv_pokemon_xp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/pokemon"
                android:textColor="@color/secondary_text"/>

            <AutoCompleteTextView
                android:id="@+id/auto_edit_pokemon_xp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textCapSentences"
                android:textColor="@color/primary_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/tv_candy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/candy"
                        android:textSize="18sp"
                        android:textColor="@color/secondary_text"/>

                    <EditText
                        android:id="@+id/edit_candy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        android:inputType="number"
                        android:textColor="@color/primary_text"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/tv_pokemon_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_amount"
                        android:textSize="18sp"
                        android:textColor="@color/secondary_text"/>

                    <EditText
                        android:id="@+id/edit_pokemon_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        android:inputType="number"
                        android:textColor="@color/primary_text"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <ListView
            android:id="@+id/list_view_xp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/edit_layout"
            android:layout_marginTop="15dp" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/main_xp_layout"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_fab_add"/>
</android.support.design.widget.CoordinatorLayout>